src/test/ui/closures/2229_closure_analysis/migrations/mir_calls_to_shims.stderr
error: changes to closure capture in Rust 2021 will affect `UnwindSafe`, `RefUnwindSafe` closure trait implementation
  --> $DIR/mir_calls_to_shims.rs:19:38
   |
LL |       let result = panic::catch_unwind(move || {
   |  ______________________________________^
LL | |
LL | |
LL | |         f.0()
   | |         --- in Rust 2018, closure captures all of `f`, but in Rust 2021, it only captures `f.0`
LL | |     });
   | |_____^
   |
note: the lint level is defined here
  --> $DIR/mir_calls_to_shims.rs:3:9
   |
LL | #![deny(rust_2021_incompatible_closure_captures)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/disjoint-capture-in-closures.html>
help: add a dummy let to cause `f` to be fully captured
   |
LL |     let result = panic::catch_unwind(move || { let _ = &f; 
LL |
LL |
LL |         f.0()
LL |     });
   |

error: aborting due to previous error

